# GenerativeNetworkModels

./: .gitignore  GNM.py  analysis_real_synth.py  demo.py  follow_up_plots.py  gnm_environment.yml  lausanne.py  matching_index.py  optimisation_criteria.py  parallel_demo.py  parallel_loop.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: index.md
docs/api-reference/: utils.md
docs/examples/: experiment_saving_example.ipynb  heterochronicity_example.ipynb  sparse_and_coarse_sweep_example.ipynb  sweep_example.ipynb  weighted_increments.ipynb
docs/stylesheets/: extra.css
docs/understanding-gnms/: binary-gnms.md  fitting-gnms.md  heterochronous-gnms.md  networks-and-graphs.md  weighted-gnms.md
src/gnm/: model.py
src/gnm/defaults/: __init__.py  compute_spatial_smoothing.py  generate_heterochronicity.py  generate_heterochronous_matrix.py  get_defaults.py
src/gnm/fitting/: experiment_dataclasses.py  experiment_saving.py  sweep.py
src/gnm/utils/: __init__.py  control.py  graph_properties.py
tests/: test_clamp_summary.py
