[build-system]
# These are the requirements for building the package
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
# Basic project metadata
name = "GenerativeNetworkModels"
version = "1.0"
description = "Computationally efficient tools for implementing Weighted Generative Models (WGMs) in network neuroscience."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Edward Young", email = "ey245@cam.ac.uk"},
    {name = "William Mills", email = "william.mills@mrc-cbu.cam.ac.uk"},
    {name = "Francesco Poli", email = "francesco.poli@mrc-cbu.cam.ac.uk"}
]

# Dependencies
dependencies = [
    "jaxtyping==0.2.36",
    "tqdm==4.66.5",
    "typeguard==2.13.3",
    "typing-extensions==4.12.2",
    "wandb==0.15.12",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "torch==2.8.0",
    "ipykernel>=6.31.0",
    "networkx>=3.0",
    "pot>=0.9.0",
    "scipy>=1.13.1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

keywords = [
    "network-science",
    "neuroscience",
    "generative-models",
    "weighted-networks",
    "brain-connectivity",
    "network-analysis",
    "graph-theory",
    "connectomics"
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter"
]

[project.urls]
# Project URLs
Homepage = "https://github.com/EdwardJamesYoung/GenerativeNetworkModels"
Documentation = "https://generative-network-models-toolbox.readthedocs.io/en/latest/"
Repository = "https://github.com/EdwardJamesYoung/GenerativeNetworkModels.git"
"Bug Tracker" = "https://github.com/EdwardJamesYoung/GenerativeNetworkModels/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gnm*"]

[tool.setuptools.package-data]
# Include any package data files
"*" = ["*.txt", "*.rst", "*.md"]
